DesignProject/tests/error/test15.src
// return statement in void function
func voidFunction() -> void {
    local x : integer;
    x := 5;
    return(x);  // error: void function should not return a value
}

